# casql

./: .gitignore  Cargo.toml  README.md  arg-test.scm  bin.md  bleh  casql.scm  config.json  core.scm  ewkb.md  out.bytes  out.json  readme.md  rust_notes.md  shell.nix  test-table-0-99.sql  to_do.md  todo.md
old/: args.rs  main.rs  model.rs  pg.rs
sql/: lines.sql  points.sql
src/: args.rs  binary_reader.rs  cas_err.rs  cas_val.rs  casable.rs  clap.rs  configs.rs  connections.rs  enums.rs  errors.rs  json.rs  lib.rs  main.rs  model.rs  mysql.rs  opts.rs  pg.rs  postgres.rs  query.rs  sql_enum.rs
src/args/: conn.rs
src/postgres/: backend.rs  backend_msgs.rs  bin_reader.rs  conn.rs  connection.rs  ewkb_writer.rs  frontend.rs  frontend_msgs.rs  json.rs  json_writer.rs  mod.rs  msg_iter.rs  pg_types.rs  postgis.rs  postgis_ewkb.rs  row_iter.rs  types.rs
src/postgres/output/: binary.rs  ekwb.rs  json.rs  mod.rs  net.rs  nums.rs  ser.rs  shapes.rs  text.rs  time.rs  write.rs
src/postgres/postgis/: ewkb.rs  geojson.rs  mod.rs
src/postgres/postgis-old/: ewkb.rs  geojson.rs  mod.rs
src/postgres_first_attempt/: backend.rs  conn.rs  ewkb_writer.rs  frontend.rs  json_writer.rs  mod.rs  msg_iter.rs  pg_types.rs  postgis.rs  postgis_ewkb.rs
tests/: integration_test.rs  postgis.sql  postgis_integration_test.rs
tests/resources/: postgis.sql  tables.sql  test-table-0-99.sql
