[package]
name = "casql"
version = "0.1.0"
authors = ["Michael Raymond <michael_raymond@fastmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
directories = "3.0.2"
postgres = { version = "0.19.1", features = ["with-chrono-0_4", "with-uuid-0_8", "with-serde_json-1"] }
serde = "1.0.126"
serde_json = "1.0.64"
serde_derive = "1.0.126"
toml = "0.5.8"
uuid = "0.8.2"

[dependencies.clap]
version = "3.0.0-beta.1"
default-features = false
features = [ "derive", "suggestions", "vec_map" ]

[patch.crates-io]
clap = { git = "https://github.com/clap-rs/clap.git" }
