[package]
name = "casql"
version = "0.1.0"
authors = []
edition = "2018"

[dependencies]
dirs = "4.0.0"
md5 = "0.7.0"
pico-args = { version = "0.4.2", default-features = false }
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
toml = { version = "0.5.8", optional = false }
