[package]
name = "casql"
version = "0.2.0"
authors = []
edition = "2018"

[dependencies]
dirs = "4.0.0"
itoap = "1.0.1"
md5 = "0.7.0"
pico-args = { version = "0.4.2", default-features = false }
ryu = "1.0.9"
serde = { version = "1.0.130", features = ["derive"] }
toml = { version = "0.5.8", optional = false }
